--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,6 +1,6 @@
 <app-navbar></app-navbar>
 <div id="main-content" class="relative w-full max-w-screen-2xl mx-auto h-full
-  overflow-y-auto">
+  overflow-y-auto mt-24">
   <main>
     <router-outlet></router-outlet>
   </main>
