unify localstorage config

--- a/src/app/includes/ads/ads.component.html
+++ b/src/app/includes/ads/ads.component.html
@@ -1,1 +1,6 @@
-<ins #banner [class]="zone" [style]="'display: inline-block;width:'+this.width+'px;height:'+this.height+'px;'" *ngIf="zone"></ins>
+<div style='text-align: center;overflow: auto;'>
+  <iframe src='//ads.coinserom.com/publisher?adsunit=41'
+    style='width:728px;height:90px;border:0px;padding:0;background-color:
+    transparent;overflow: auto;'>
+  </iframe>
+</div>
