--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="pt4 flex justify-center items-center text-center">
-  <app-ads type="970x90"></app-ads>
+  <app-ads></app-ads>
 </div>
 <div class="px-2 pt-4" *ngIf="isLoading">
   <div
