--- a/src/app/includes/navbar/navbar.component.html
+++ b/src/app/includes/navbar/navbar.component.html
@@ -18,7 +18,7 @@
         <svg
           id="theme-toggle-dark-icon"
           class="w-5 h-5"
-          [ngClass]="themeService.theme === 'dark' ? 'hidden' : ''"
+          [ngClass]="configService.theme === 'dark' ? 'hidden' : ''"
           fill="currentColor"
           viewBox="0 0 20 20"
           xmlns="http://www.w3.org/2000/svg">
@@ -29,7 +29,7 @@
         <svg
           id="theme-toggle-light-icon"
           class="w-5 h-5"
-          [ngClass]="themeService.theme !== 'dark' ? 'hidden' : ''"
+          [ngClass]="configService.theme !== 'dark' ? 'hidden' : ''"
           fill="currentColor"
           viewBox="0 0 20 20"
           xmlns="http://www.w3.org/2000/svg">
@@ -66,7 +66,7 @@
         text-sm text-gray-900 dark:text-white rounded-lg cursor-pointer
         hover:bg-gray-100 dark:hover:bg-gray-700 dark:hover:text-white
         uppercase">
-        {{currencyService.activeCurrency}}
+        {{configService.currency}}
       </button>
       <button
         type="button"
