--- a/src/app/pages/accounts/accounts.component.html
+++ b/src/app/pages/accounts/accounts.component.html
@@ -1,5 +1,5 @@
 <div class="pt4 flex justify-center items-center text-center">
-  <app-ads type="970x90"></app-ads>
+  <app-ads></app-ads>
 </div>
 <div class="px-2 pt-4">
   <div class="p-4 bg-white border border-gray-200 rounded-lg shadow-sm
@@ -7,7 +7,7 @@
     <div class="mb-6">
 
       <h2 class="text-2xl font-medium leading-tight text-center
-        text-warning-500 cursor-pointer mb-4" (click)="showGroupsDrawer()">{{groupService.getAllGroups().length
+        text-warning-500 cursor-pointer mb-4" (click)="showGroupsDrawer()">{{configService.getAllGroups().length
         > 0 ? groupService.getActiveGroupName() : 'No Group'}}</h2>
 
 
@@ -59,7 +59,7 @@
                 && accountBalances[i] ? accountBalances[i].unclaimed
                 : 0)}}
               </button>
-              <span class="bg-yellow-500 text-white text-xs font-medium mr-2 px-2.5 py-0.5 rounded dark:bg-yellow-500 dark:text-white">{{readyToFight[i]}}</span>
+              <span class="text-xs font-medium mr-2 px-2.5 py-0.5 rounded" [ngClass]="getMultiplierColor()">{{readyToFight[i]}}</span>
               <a class="ml-auto cursor-pointer px-4 text-md text-warning-500"
                 (click)="showAccountDrawer(account)">...</a>
             </div>
@@ -287,7 +287,7 @@
                               utilService.getNextTargetExpLevel(char.data.level).level
                               + 1 : ''}}
                             </td>
-                            <td class="px-6 py-4">
+                            <td class="px-6 py-4" [ngClass]="getStaminaColor(char.stamina)">
                               {{char && char.stamina ? char.stamina : ''}}
                             </td>
                           </tr>
@@ -300,7 +300,7 @@
                 <!-- ads -->
                 <div class="w-full row-span-2 p-2 flex items-center
                   justify-center">
-                  <app-ads type="250x250"></app-ads>
+                  <!--<app-ads type="250x250"></app-ads>-->
                 </div>
                 <!-- end ads -->
               </div>
@@ -346,7 +346,7 @@
           dark:hover:bg-warning-700 focus:outline-none
           dark:focus:ring-warning-800
           block" (click)="showManageGroupDrawer()"
-          [disabled]="groupService.getAllGroups().length === 0">Manage Group</button>
+          [disabled]="configService.getAllGroups().length === 0">Manage Group</button>
         <button type="button" class="text-white bg-success-700
           hover:bg-success-800
           w-full focus:ring-4 focus:ring-success-300 font-medium rounded-lg
@@ -616,7 +616,7 @@
   </div>
 </div>
 
-<button (click)="toggleList()"
+<button (click)="toggleExpanded()"
   class="fixed z-20 bottom-4 right-4 bg-warning-600 w-12 h-12 rounded-full
   drop-shadow-lg flex justify-center items-center text-white text-4xl
   hover:bg-warning-700 hover:drop-shadow-2xl hover:animate-bounce duration-300">{{expanded ? '&minus;' : '&plus;'}}</button>
