--- a/src/app/pages/treasury/treasury.component.html
+++ b/src/app/pages/treasury/treasury.component.html
@@ -21,7 +21,7 @@
           dark:border-warning-600 dark:bg-gray-800">
           <!-- header -->
           <h2 class="mb-0" [id]="'partner-head-' + i">
-            <button
+            <button [id]="'partner-head-' + i + '-btn'"
               class="group relative flex w-full items-center rounded-none
               border-0 bg-white px-5 py-4 text-left text-base text-gray-800
               transition [overflow-anchor:none] hover:z-[2] focus:z-[3]
