--- a/src/app/pages/treasury/treasury.component.html
+++ b/src/app/pages/treasury/treasury.component.html
@@ -2,7 +2,7 @@
 <div class="pt4 flex justify-center items-center text-center">
   <app-ads></app-ads>
 </div>
-<div class="px-2 pt-4">
+<div class="px-2 pt-4 mb-16">
   <div class="p-4 bg-white border border-warning-200 rounded-lg shadow-sm
     2xl:col-span-2 dark:border-warning-700 sm:p-6 dark:bg-gray-800">
     <!-- skeleton -->
