--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -5,3 +5,6 @@
     <router-outlet></router-outlet>
   </main>
 </div>
+<div class="fixed bottom-0 z-50 w-full h-16 flex justify-center items-center text-center mt-16">
+  <app-ads provider="flyersquare" type="970x90"></app-ads>
+</div>
